--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.4.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
-    "react-apollo": "^3.1.3"
+    "react-apollo": "^3.1.3",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
