--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.4.7",
+    "apollo-server": "^2.11.0",
+    "aws-sdk": "^2.643.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -23,6 +25,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
+    "graphql-upload": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
     "react-apollo": "^3.1.3",
