--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "apollo-upload-client": "^12.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^10.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
