--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "project-march",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client-install": "npm install --prefix client",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -15,23 +15,24 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
     "apollo-server": "^2.11.0",
+    "apollo-server-express": "^2.11.0",
     "aws-sdk": "^2.643.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "graphql-upload": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
+    "nodemon": "^2.0.2",
     "react-apollo": "^3.1.3",
     "validator": "^12.2.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+  "devDependencies": {}
 }
